test/fail/basic_syntax/binary_noreturn.lly
#[
SyntaxError: Function needed to return a value, but did not.
    from binary_noreturn.lly:8
]#

define f { }

if f() || f():
    print("Failed.\n")
    
